# ump

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  SETUP.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  start.sh  stop.sh
services/connectors/: .env.example  README.md  main.py  nodes_integrations_schema.sql  platform_integrations_schema.sql  pyproject.toml  requirements.txt
services/connectors/app/: __init__.py  main.py
services/connectors/app/connectors/: __init__.py  asterisk.py  base.py  credentials.py  portainer.py  registry.py  schema.py  twilio.py  zabbix.py
services/connectors/app/connectors/manifests/: slack.yaml
services/connectors/app/connectors/providers/: 1password-scim.yaml  accelo.yaml  active-campaign.yaml  acuity-scheduling.yaml  addepar-basic.yaml  addepar.yaml  adobe-umapi.yaml  adobe-workfront.yaml  adobe.yaml  adp-lyric.yaml  adp-run.yaml  adp-workforce-now-next-gen.yaml  adp-workforce-now.yaml  adp.yaml  (+608 more)
services/connectors/app/core/: __init__.py  config.py  database.py  dependencies.py
services/connectors/app/models/: __init__.py
services/connectors/app/routers/: __init__.py  connectors.py  credentials.py  device_execution.py  execution.py  integrations.py  nodes.py  platform_integrations.py  providers.py
services/connectors/app/schemas/: __init__.py  connector.py  credential.py  execution.py  integration.py  provider.py
services/connectors/app/temporal/: __init__.py
services/connectors/scripts/: __init__.py  nango_converter.py
services/connectors/tests/: __init__.py  conftest.py
services/connectors/ucmp_connectors/: __init__.py
services/connectors/ucmp_connectors/connectors/: __init__.py  asterisk.py  twilio.py
services/connectors/ucmp_connectors/core/: __init__.py  registry.py
services/connectors/ucmp_connectors/db/: schema.sql
services/connectors/ucmp_connectors/temporal/: __init__.py
services/connectors/ucmp_connectors/utils/: __init__.py
(+295 files in other folders)
